--- a/bespin_api/tasks/main.yml
+++ b/bespin_api/tasks/main.yml
@@ -1,111 +1,27 @@
 - set_fact:
     api_environment: "{{ api_environment|default({}) | combine(item) }}"
   with_items:
+    - POSTGRES_USER: "{{ bespin_settings.database.username }}"
+    - POSTGRES_PASSWORD: "{{ bespin_settings.database.password }}"
+    - POSTGRES_DB: "{{ bespin_settings.database.name }}"
     - BESPIN_SECRET_KEY: "{{ bespin_settings.api.secret_key }}"
     - BESPIN_ALLOWED_HOST: "{{ bespin_settings.api.allowed_host }}"
-    - BESPIN_DB_NAME: "{{ bespin_settings.database.name }}"
-    - BESPIN_DB_USER: "{{ bespin_settings.database.username }}"
-    - BESPIN_DB_PASSWORD: "{{ bespin_settings.database.password }}"
-    - BESPIN_DB_HOST: "{{ bespin_settings.database.host }}"
     - BESPIN_CORS_HOST: "{{ bespin_settings.api.cors_host }}"
-    - BESPIN_STATIC_ROOT: /srv/static
+    - BESPIN_DB_HOST: "{{ bespin_settings.database.host }}"
+    - LANDO_DJANGO_USERNAME: "{{ bespin_settings.api.lando_username }}"
+    - LANDO_DJANGO_PASSWORD: "{{ bespin_settings.api.lando_password }}"
+    - LANDO_DJANGO_TOKEN: "{{ bespin_settings.api.lando_token }}"
 
-- name: Update apt cache
-  apt: update_cache=yes
-
-- name: Install apache2 packages
-  apt: name={{item}}
-  with_items:
-    - python-pip
-    - python-psycopg2
-    - apache2
-    - libapache2-mod-wsgi
-
-- git:
-    repo: https://github.com/Duke-GCB/bespin-api.git
-    dest: /srv/bespin_api
-    version: prod_settings
-    force: yes
-
-- pip:
-    requirements: /srv/bespin_api/requirements.txt
-
-- name: Make temp dir for static
-  file:
-    path: /srv/bespin_api/static
-    state: directory
-
-- name: Create static directory for django app
-  command: python manage.py collectstatic --noinput --settings=bespin.settings_prod
-  args:
-    chdir: /srv/bespin_api/
-  environment: "{{api_environment}}"
-
-- name: Setup apache config
-  blockinfile:
-    dest: /etc/apache2/apache2.conf
-    block: |
-      Alias /static/ /srv/static/
-      <Directory /srv/static>
-        Require all granted
-      </Directory>
-      WSGIScriptAlias / /srv/bespin_api/bespin/wsgi.py
-      WSGIPythonPath /srv/bespin_api/
-      WSGIPassAuthorization on
-      <Directory /srv/bespin_api/bespin>
-        <Files wsgi.py>
-          Require all granted
-        </Files>
-      </Directory>
-      SetEnv BESPIN_SECRET_KEY "{{ bespin_settings.api.secret_key }}"
-      SetEnv BESPIN_ALLOWED_HOST "{{ bespin_settings.api.allowed_host }}"
-      SetEnv BESPIN_CORS_HOST "{{ bespin_settings.api.cors_host }}"
-      SetEnv BESPIN_STATIC_ROOT /srv/static
-      SetEnv BESPIN_DB_NAME "{{ bespin_settings.database.name }}"
-      SetEnv BESPIN_DB_USER "{{ bespin_settings.database.username }}"
-      SetEnv BESPIN_DB_PASSWORD "{{ bespin_settings.database.password }}"
-      SetEnv BESPIN_DB_HOST "{{ bespin_settings.database.host }}"
-
-
-- name: Setup database
-  command: python manage.py migrate --settings=bespin.settings_prod
-  args:
-    chdir: /srv/bespin_api/
-  environment: "{{api_environment}}"
-
-- stat:
-    path: /srv/created_lando_user
-  register: created_lando_user
-
-- name: Create lando user with token
-  command: python manage.py makeusertoken --settings=bespin.settings_prod {{ bespin_settings.api.lando_username }} {{ bespin_settings.api.lando_password }} {{ bespin_settings.api.lando_token }}
-  run_once: true
-  args:
-    chdir: /srv/bespin_api/
-  environment: "{{api_environment}}"
-  when: created_lando_user.stat.exists == False
-
-- file:
-    state: touch
-    path: /srv/created_lando_user
-
-- stat:
-    path: /srv/loaded_sample_data
-  register: loaded_sample_data
-
-- name: Load database with example data
-  command: python manage.py loaddata example_setup_fixture.yaml --settings=bespin.settings_prod
-  run_once: true
-  args:
-    chdir: /srv/bespin_api/
-  environment: "{{api_environment}}"
-  when: loaded_sample_data.stat.exists == False
-
-- file:
-    state: touch
-    path: /srv/loaded_sample_data
-
-- service:
-    name: apache2
-    state: restarted
-    enabled: yes
+- name: Create app container
+  docker_container:
+    image: quay.io/dukegcb/bespin-web
+    name: bespin-web
+    env: "{{ api_environment }}"
+    volumes:
+      - /etc/external/:/etc/external/
+    ports:
+      - "80:80"
+      - "443:443"
+    pull: true
+    state: started
+    restart_policy: always
