copy_bespin_hosts creates bespin_hosts_list
bespin_hosts_list contains a dictionary of hostnames to ip addresses
this will help docker containers on different vms talk to each other

--- a/bespin_api/tasks/main.yml
+++ b/bespin_api/tasks/main.yml
@@ -23,5 +23,6 @@
       - "80:80"
       - "443:443"
     pull: true
+    etc_hosts: "{{ bespin_hosts_list }}"
     state: started
     restart_policy: always
