Incorporated a bunch of suggestions from recent pull request.
There were a bunch of easy fixes that were suggested in a recent pull
request that were worth implementing plus we are now checking the kernel
version from facts for the version of gpfs gplbin rpm to install.

--- a/common/tasks/main.yml
+++ b/common/tasks/main.yml
@@ -11,8 +11,8 @@
 - name: register to satellite
   redhat_subscription:
     state: present
-    org_id: DHTS
-    activationkey: key-gcb-rhel6-64bit-prod
+    org_id: "{{ redhat_reg.org_id }}"
+    activationkey: "{{ redhat_reg.activationkey }}"
   tags:
     - rhnregister
 
