--- a/common/tasks/auth.yml
+++ b/common/tasks/auth.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Copy ldap.conf
-  template: src=ldap.conf.j2 dest=/etc/openldap/ldap.conf owner=root group=root mode=0644
+  copy: src=ldap.conf dest=/etc/openldap/ldap.conf owner=root group=root mode=0644
 
 - name: Create cacert directory
   file:
@@ -54,8 +54,8 @@
     mode: 0440
 
 - name: copy ssh banner warning
-  template:
-    src: issue.net.j2
+  copy:
+    src: issue.net
     dest: /etc/issue.net
     owner: root
     group: root
