--- a/gpfs/tasks/main.yml
+++ b/gpfs/tasks/main.yml
@@ -15,7 +15,7 @@
     - docs.noarch
     - gpl.noarch
     - msg.en_US.noarch
-    - gplbin-2.6.32-642.11.1.el6.x86_64-4.1.1-8.x86_64
+    - gplbin-{{ ansible_kernel }}-4.1.1-8.x86_64
 
 - name: Install Kernel devel
   yum: name={{ item }} state=present
