--- a/bespin_database/tasks/main.yml
+++ b/bespin_database/tasks/main.yml
@@ -12,6 +12,7 @@
     env: "{{ db_environment }}"
     volumes:
       - /etc/external/:/etc/external/
+      - /var/lib/postgresql/data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     pull: true
