Reworks imads playbook to not require sudo
- Removes become from imads playbook
- Assumes now that docker and docker-py are installed
- Assumes access to the “/srv” directory for placing all incoming files
- Assumes that remote user has access to docker socket (likely via
docker group)
- Avoids rewriting postgresql.conf (since this gets owned by root) in
favor of specifying config options with -c
- Sets SELinux type of ssl cert/key

These changes were developed in gcb-ansible repo, but were not merged before splitting roles into separate repo

--- a/docker_webapp/tasks/main.yml
+++ b/docker_webapp/tasks/main.yml
@@ -6,11 +6,13 @@
   copy: content="{{ docker_webapp.ssl_cert }}"
         dest="{{ docker_webapp.ssl_dir }}/{{ docker_webapp.ssl_cert_file }}"
         mode=400
+        setype="svirt_sandbox_file_t"
   when: "{{ docker_webapp.ssl_cert_file is defined }}"
 - name: Place SSL private key
   copy: content="{{ docker_webapp.ssl_key }}"
         dest="{{ docker_webapp.ssl_dir }}/{{ docker_webapp.ssl_key_file }}"
         mode=400
+        setype="svirt_sandbox_file_t"
   when: "{{ docker_webapp.ssl_key_file is defined }}"
 - name: Make shibboleth directory
   file: path={{ docker_webapp.shib_dir }} state=directory
