--- a/imads_webapp/tasks/main.yml
+++ b/imads_webapp/tasks/main.yml
@@ -1,7 +1,3 @@
-- name: Install docker py on RedHat
-  yum: name=python-docker-py
-  when: ansible_os_family == "RedHat"
-
 - name: Creates predictions data directory shared by portal and worker
   file: path="{{ imads.data_root }}/pred_data" state=directory
 
@@ -12,40 +8,7 @@
   file: path="{{ imads.data_root }}/pred_data/work" state=directory mode="a+rwx"
 
 # Create database
-- include: tasks/setup_postgres.yml db_restart=false db_config=normal
-
-- stat: path="{{ imads.data_root }}/pred_data/loaded.txt"
-  register: pred_data_loaded
-
-# Populate database
-
-- include: tasks/setup_postgres.yml db_restart=true db_config=load
-  when: pred_data_loaded.stat.isreg is not defined
-
-- name: Initial download and load database with prediction data
-  when: pred_data_loaded.stat.isreg is not defined
-  docker_container:
-    image: dukegcb/imads
-    networks:
-      - name: "{{ imads.network }}"
-    env: "{{ imads.env }}"
-    command: python load.py download
-    detach: false
-    volumes:
-      - /etc/external/:/etc/external/
-      - "{{ imads.data_root }}/pred_data:/tmp/pred_data"
-    pull: true
-
-- name: Create finished loading text file
-  when: pred_data_loaded.stat.isreg is not defined
-  file: path="{{ imads.data_root }}/pred_data/loaded.txt" state=touch
-
-# Setup production database settings
-
-- include: tasks/setup_postgres.yml db_restart=true db_config=production
-  when: pred_data_loaded.stat.isreg is not defined
-
-# Start web portal, vacuum daemon, and worker
+- include: tasks/setup_postgres.yml
 
 - include: tasks/setup_portal.yml
 
