--- a/jupyterhub/tasks/main.yml
+++ b/jupyterhub/tasks/main.yml
@@ -183,6 +183,7 @@
   lineinfile: dest=/etc/jupyterhub/jupyterhub_config.py line="c.JupyterHub.ssl_key = '/etc/jupyterhub/server.key'"
   tags: jupyter-ssl
 
+# Always reload the daemon and restart the service, since the underlying config easily changes
 - name: start jupyterhub systemd service
-  systemd: name=jupyterhub enabled=yes state=started
+  systemd: name=jupyterhub enabled=yes daemon_reload=yes state=restarted
   tags: jupyter-service
