--- a/elucidator_restart/tasks/main.yml
+++ b/elucidator_restart/tasks/main.yml
@@ -1,14 +1,23 @@
 - name: Make directory for external files
   file: path=/etc/external state=directory
 
+- name: Make directory for external shibboleth files
+  file: path=/etc/external/shibboleth state=directory
+
+- name: Make directory for external ssl files
+  file: path=/etc/external/ssl state=directory
+
+- name: Make directory for external ssh files
+  file: path=/etc/external/ssh state=directory
+
 - name: Place SP certificate
   copy: content="{{ elucidator_config.shibboleth.cert }}"
-        dest=/etc/external/shibboleth/sp-cert.pm"
+        dest=/etc/external/shibboleth/sp-cert.pem
         mode=400
 
 - name: Place SP key
   copy: content="{{ elucidator_config.shibboleth.key }}"
-        dest=/etc/external/shibboleth/sp-key.pm
+        dest=/etc/external/shibboleth/sp-key.pem
         mode=400
 
 - name: Place SSL Certificate
@@ -28,17 +37,17 @@
 
 - name: Place SSH Public Key
   copy: content="{{ elucidator_config.ssh.id_rsa_pub }}"
-        dest=/etc/external/ssl/id_rsa.pub
+        dest=/etc/external/ssh/id_rsa.pub
         mode=400
 
 - name: Place SSH Private Key
   copy: content="{{ elucidator_config.ssh.id_rsa }}"
-        dest=/etc/external/ssl/id_rsa
+        dest=/etc/external/ssh/id_rsa
         mode=400
 
 - name: Place SSH known_hosts
   copy: content="{{ elucidator_config.ssh.known_hosts }}"
-        dest=/etc/external/ssl/known_hosts
+        dest=/etc/external/ssh/known_hosts
         mode=400
 
 - name: Create app container
@@ -46,7 +55,7 @@
     image: quay.io/dukegcb/elucidator-restart:docker
     name: web
     env:
-      ELUCIDATOR_HOST: {{ elucidator_config.target_host}}
+      ELUCIDATOR_HOST: "{{ elucidator_config.target_host}}"
     volumes:
       - /etc/external/:/etc/external/
       - /etc/external/ssh:/usr/share/httpd/.ssh
