Minor fixes for jupyterhub task
- Provide port in config as int (not string)
- Remove user designation from systemd service, so that it can bind to privileged ports

--- a/jupyterhub/tasks/main.yml
+++ b/jupyterhub/tasks/main.yml
@@ -151,7 +151,7 @@
   lineinfile:
     path: '/etc/jupyterhub/jupyterhub_config.py'
     regexp: '^c\.JupyterHub\.port ='
-    line: "c.JupyterHub.port = '{{port}}'"
+    line: "c.JupyterHub.port = {{port}}"
   tags: jupyter-config
 
 - name: set proxy IP address
