ssl setup for bespin/bespin-ws
Assumes certs will be in "files" directory of ansible playbook.

--- a/bespin_job_watcher/tasks/main.yml
+++ b/bespin_job_watcher/tasks/main.yml
@@ -1,18 +1,13 @@
 - name: Make SSL directory
   file: path="{{ bespin_settings.job_watcher.ssl_dir }}" state=directory
-  when: "{{ bespin_settings.job_watcher.ssl_dir is defined }}"
-
-- name: Place SSL certificate
-  copy: content="{{ bespin_settings.job_watcher.ssl_cert }}"
-        dest="{{ bespin_settings.job_watcher.ssl_dir }}/{{ bespin_settings.job_watcher.ssl_cert_file }}"
-        mode=400
-  when: "{{ bespin_settings.job_watcher.ssl_cert_file is defined }}"
 
 - name: Place SSL private key
-  copy: content="{{ bespin_settings.job_watcher.ssl_key }}"
-        dest="{{ bespin_settings.job_watcher.ssl_dir }}/{{ bespin_settings.job_watcher.ssl_key_file }}"
+  copy: src="../../../files/{{ bespin_settings.job_watcher.ssl_cert_file }}" dest="{{ bespin_settings.job_watcher.ssl_dir }}/server.crt"
         mode=400
-  when: "{{ bespin_settings.job_watcher.ssl_key_file is defined }}"
+
+- name: Place SSL Certificate
+  copy: src="../../../files/{{ bespin_settings.job_watcher.ssl_key_file }}" dest="{{ bespin_settings.job_watcher.ssl_dir }}/server.key"
+        mode=400
 
 - name: Create directory for config
   file:
