--- a/bespin_web/tasks/main.yml
+++ b/bespin_web/tasks/main.yml
@@ -30,7 +30,7 @@
 
 - name: Create app container
   docker_container:
-    image: quay.io/dukegcb/bespin-web
+    image: dukegcb/bespin-web
     name: bespin-web
     env: "{{ web_environment }}"
     volumes:
