--- a/bespin_lando/tasks/main.yml
+++ b/bespin_lando/tasks/main.yml
@@ -13,6 +13,7 @@
         network_name: "{{ bespin_settings.worker_vm.network_name }}"
         floating_ip_pool_name: "{{ bespin_settings.worker_vm.floating_ip_pool_name }}"
         default_favor_name: "{{ bespin_settings.worker_vm.default_favor_name }}"
+        cwl_base_command: [ "{{ bespin_settings.worker_vm.cwl_base_command }}" ]
       cloud_settings:
         auth_url: "{{ bespin_settings.worker_openstack.auth_url }}"
         username: "{{ bespin_settings.worker_openstack.username }}"
