--- a/bespin_lando/tasks/main.yml
+++ b/bespin_lando/tasks/main.yml
@@ -14,6 +14,7 @@
         floating_ip_pool_name: "{{ bespin_settings.worker_vm.floating_ip_pool_name }}"
         default_favor_name: "{{ bespin_settings.worker_vm.default_favor_name }}"
         cwl_base_command: [ "{{ bespin_settings.worker_vm.cwl_base_command }}" ]
+        volume_mounts: "{{ bespin_settings.worker_vm.volume_mounts }}"
       cloud_settings:
         auth_url: "{{ bespin_settings.worker_openstack.auth_url }}"
         username: "{{ bespin_settings.worker_openstack.username }}"
