Rename lando_config.j2 -> lando_config.yml.j2

--- a/bespin_lando/tasks/main.yml
+++ b/bespin_lando/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Setup lando config
   template:
-    src: lando_config.j2
+    src: lando_config.yml.j2
     dest: /etc/lando_config.yml
 
 - name: Create app container
