Update docker image for d4s2 to use hosted on docker hub
- cascading builds of d4s2+d4s2_apache don't really work well on quay. went back to docker hub for this since repository builds can be linked to their parent images

--- a/d4s2_webapp/tasks/main.yml
+++ b/d4s2_webapp/tasks/main.yml
@@ -12,7 +12,7 @@
     restart_policy: always
 - name: Create app container
   docker_container:
-    image: quay.io/dukegcb/d4s2-apache
+    image: dukegcb/d4s2-apache
     name: web
     networks:
       - name: "{{ d4s2_config.network }}"
