--- a/bespin_lando/tasks/main.yml
+++ b/bespin_lando/tasks/main.yml
@@ -13,7 +13,7 @@
         ssh_key_name: "{{ bespin_settings.worker_vm.ssh_key_name }}"
         network_name: "{{ bespin_settings.worker_vm.network_name }}"
         floating_ip_pool_name: "{{ bespin_settings.worker_vm.floating_ip_pool_name }}"
-        default_favor_name: "{{ bespin_settings.worker_vm.default_favor_name }}"
+        default_flavor_name: "{{ bespin_settings.worker_vm.default_flavor_name }}"
       cloud_settings:
         auth_url: "{{ bespin_settings.worker_openstack.auth_url }}"
         username: "{{ bespin_settings.worker_openstack.username }}"
