Sets mailer environment variables in bespin_web role

--- a/bespin_web/tasks/main.yml
+++ b/bespin_web/tasks/main.yml
@@ -20,6 +20,9 @@
     - BESPIN_CORS_HOST: "{{ bespin_settings.web.cors_host }}"
     - BESPIN_DB_HOST: "{{ bespin_settings.database.host }}"
     - BESPIN_SERVER_NAME: "{{bespin_settings.web.server_name}}"
+    - BESPIN_SMTP_HOST: "{{bespin_settings.mailer.smtp_host}}"
+    - BESPIN_MAILER_EMAIL: "{{bespin_settings.mailer.email}}"
+    - BESPIN_MAILER_ADMIN_BCC: "{{bespin_settings.mailer.admin_bcc}}"
     - LANDO_DJANGO_USERNAME: "{{ bespin_settings.web.lando_username }}"
     - LANDO_DJANGO_PASSWORD: "{{ bespin_settings.web.lando_password }}"
     - LANDO_DJANGO_TOKEN: "{{ bespin_settings.web.lando_token }}"
