Set createhome to no for jupyter user
- Doesnt work on hardac and doesnt seem to be necessary

--- a/jupyterhub/tasks/main.yml
+++ b/jupyterhub/tasks/main.yml
@@ -66,7 +66,7 @@
   tags: jupyter-user
 
 - name: add jupyter user, set encrypted password
-  user: name=jupyter state=present password="{{jupyterpw}}"
+  user: name=jupyter state=present password="{{jupyterpw}}" createhome=no
   tags: jupyter-user
 
 - name: add docker group
