--- a/bespin_web/tasks/main.yml
+++ b/bespin_web/tasks/main.yml
@@ -9,6 +9,16 @@
   copy: src="../../../files/{{ bespin_settings.web.ssl_key_file }}" dest="{{ bespin_settings.web.ssl_dir }}/privkey.pem"
         mode=400
 
+- name: Remove existing ui directory
+  file:
+    state: absent
+    path: "{{ bespin_settings.ui.srv_dir }}"
+
+- name: Make empty ui directory
+  file:
+    state: directory
+    path: "{{ bespin_settings.ui.srv_dir }}"
+
 - name: Download bespin-ui release tar.gz
   unarchive:
     src: "{{ bespin_settings.ui.dist_base_url }}/{{ bespin_settings.ui.dist_version }}/{{ bespin_settings.ui.dist_filename }}"
@@ -45,7 +55,7 @@
     env: "{{ web_environment }}"
     volumes:
       - /etc/external/:/etc/external/
-      - "{{ bespin_settings.ui.srv_dir }}":/srv/ui
+      - "{{ bespin_settings.ui.srv_dir }}:/srv/ui"
     ports:
       - "80:80"
       - "443:443"
