--- a/bespin_web/tasks/main.yml
+++ b/bespin_web/tasks/main.yml
@@ -1,65 +1,7 @@
-- name: Make SSL directory
-  file: path="{{ bespin_settings.web.ssl_dir }}" state=directory
+- include_tasks: setup-environment.yml
 
-- name: Place SSL private key
-  copy: src="../../../files/{{ bespin_settings.web.ssl_cert_file }}" dest="{{ bespin_settings.web.ssl_dir }}/cacert.pem"
-        mode=400
+- include_tasks: run-fixtures.yml
+  tags: run-bespin-web-fixtures
 
-- name: Place SSL Certificate
-  copy: src="../../../files/{{ bespin_settings.web.ssl_key_file }}" dest="{{ bespin_settings.web.ssl_dir }}/privkey.pem"
-        mode=400
-
-- name: Remove existing ui directory
-  file:
-    state: absent
-    path: "{{ bespin_settings.ui.srv_dir }}"
-
-- name: Make empty ui directory
-  file:
-    state: directory
-    path: "{{ bespin_settings.ui.srv_dir }}"
-
-- name: Download bespin-ui release tar.gz
-  unarchive:
-    src: "{{ bespin_settings.ui.dist_base_url }}/{{ bespin_settings.ui.dist_version }}/{{ bespin_settings.ui.dist_filename }}"
-    dest: "{{ bespin_settings.ui.srv_dir }}"
-    remote_src: yes
-
-- set_fact:
-    web_environment: "{{ web_environment|default({}) | combine(item) }}"
-  with_items:
-    - POSTGRES_USER: "{{ bespin_settings.database.username }}"
-    - POSTGRES_PASSWORD: "{{ bespin_settings.database.password }}"
-    - POSTGRES_DB: "{{ bespin_settings.database.name }}"
-    - BESPIN_SECRET_KEY: "{{ bespin_settings.web.secret_key }}"
-    - BESPIN_ALLOWED_HOST: "{{ bespin_settings.web.allowed_host }}"
-    - BESPIN_DB_HOST: "{{ bespin_settings.database.host }}"
-    - BESPIN_SERVER_NAME: "{{bespin_settings.web.server_name}}"
-    - BESPIN_SMTP_HOST: "{{bespin_settings.mailer.smtp_host}}"
-    - BESPIN_MAILER_EMAIL: "{{bespin_settings.mailer.email}}"
-    - BESPIN_MAILER_ADMIN_BCC: "{{bespin_settings.mailer.admin_bcc}}"
-    - LANDO_DJANGO_USERNAME: "{{ bespin_settings.web.lando_username }}"
-    - LANDO_DJANGO_PASSWORD: "{{ bespin_settings.web.lando_password }}"
-    - LANDO_DJANGO_TOKEN: "{{ bespin_settings.web.lando_token }}"
-    - GROUP_MANAGER_ACCOUNT_ID: "{{ bespin_settings.web.group_manager_account_id }}"
-    - GROUP_MANAGER_PASSWORD: "{{ bespin_settings.web.group_manager_password }}"
-    - RABBIT_HOST: "{{ bespin_settings.rabbit.host }}"
-    - RABBIT_USERNAME: "{{ bespin_settings.rabbit.username }}"
-    - RABBIT_PASSWORD: "{{ bespin_settings.rabbit.password }}"
-    - RABBIT_QUEUENAME: "{{ bespin_settings.rabbit.listen_queue }}"
-
-- name: Create app container
-  docker_container:
-    image: dukegcb/bespin-web
-    name: bespin-web
-    env: "{{ web_environment }}"
-    volumes:
-      - /etc/external/:/etc/external/
-      - "{{ bespin_settings.ui.srv_dir }}:/srv/ui/"
-    ports:
-      - "80:80"
-      - "443:443"
-    pull: true
-    etc_hosts: "{{ bespin_hosts_list }}"
-    state: started
-    restart_policy: always
+- include_tasks: run-server.yml
+  tags: run-bespin-web-server
